fix: improve contrast of icons
Change the baseline colour of the icons match the deemphasised text.

This means the icons meet at least 3:1 contrast ratio against the background.

--- a/src/scss/themes/_base.scss
+++ b/src/scss/themes/_base.scss
@@ -44,12 +44,12 @@
   --nav-svg-fill-hover: #{$secondary-text-color};
   --nav-text-color-hover: #{$secondary-text-color};
 
-  --action-button-fill-color: #{lighten($main-theme-color, 18%)};
-  --action-button-fill-color-hover: #{lighten($main-theme-color, 22%)};
-  --action-button-fill-color-active: #{lighten($main-theme-color, 5%)};
-  --action-button-fill-color-pressed: #{darken($main-theme-color, 7%)};
-  --action-button-fill-color-pressed-hover: #{darken($main-theme-color, 2%)};
-  --action-button-fill-color-pressed-active: #{darken($main-theme-color, 15%)};
+  --action-button-fill-color: #{lighten($deemphasized-color, 15%)};
+  --action-button-fill-color-hover: #{lighten($deemphasized-color, 7.5%)};
+  --action-button-fill-color-active: #{$deemphasized-color};
+  --action-button-fill-color-pressed: #{saturate($main-theme-color, 5%)};
+  --action-button-fill-color-pressed-hover: #{darken(saturate($main-theme-color, 5%), 4%)};
+  --action-button-fill-color-pressed-active: #{darken(saturate($main-theme-color, 5%), 8%)};
 
   --action-button-deemphasized-fill-color: #{$deemphasized-color};
   --action-button-deemphasized-fill-color-hover: #{lighten($deemphasized-color, 22%)};
