--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -1,6 +1,13 @@
 :root {
   $deemphasized-color: lighten($main-bg-color, 45%);
 
+  --action-button-fill-color: #{darken($deemphasized-color, 2%)};
+  --action-button-fill-color-hover: #{lighten($deemphasized-color, 9%)};
+  --action-button-fill-color-active: #{$deemphasized-color};
+  --action-button-fill-color-pressed: #{lighten($main-theme-color, 5%)};
+  --action-button-fill-color-pressed-hover: #{lighten(saturate($main-theme-color, 10%), 4%)};
+  --action-button-fill-color-pressed-active: #{lighten(saturate($main-theme-color, 10%), 8%)};
+
   --action-button-deemphasized-fill-color: #{$deemphasized-color};
   --action-button-deemphasized-fill-color-hover: #{lighten($deemphasized-color, 22%)};
   --action-button-deemphasized-fill-color-active: #{lighten($deemphasized-color, 5%)};
